# fastmicro

./: .gitignore  .mypy.ini  README.md  logging.ini  pyproject.toml  pytest.ini
.github/workflows/: main.yml
example/: example.py  hello.py  logging.ini  test.py
fastmicro/: __init__.py  entrypoint.py  env.py  messaging.py  registrar.py  schema.py  serializer.py  service.py  topic.py  types.py
fastmicro/messaging/: __init__.py  header.py  kafka.py  memory.py  nats.py  pulsar.py  redis.py  topic.py
fastmicro/serializer/: __init__.py  cbor.py  json.py  msgpack.py
tests/: conftest.py  test_client.py  test_entrypoint.py  test_performance.py  test_registrar.py  test_server.py  test_service.py
