[tool.poetry]
name = "fastmicro"
version = "0.1.0"
description = "Fast, simple microservice framework."
authors = ["larmoreg <larmoreg@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
aiokafka = "^0.7.0"
aioredis = "^1.3.1"
msgpack = "^1.0.2"
mypy = "^0.812"
pulsar-client = "^2.7.1"
pydantic = "^1.7.3"
python = "^3.7"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-profiling = "^1.7.0"
pytest-stub = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
