[tool.poetry]
name = "fastmicro"
version = "0.2.1"
description = "Fast, simple microservice framework"
authors = ["larmoreg <larmoreg@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/larmoreg/fastmicro"

keywords = ["fast", "simple", "microservice", "framework", "asyncio", "redis", "kafka"]
classifiers = [
    "Framework :: AsyncIO",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
pydantic = "^1.8.2"
python = "^3.7"
uvloop = "^0.15.3"

# cbor
cbor2 = { version = "^5.4.1", optional = true }

# kafka
aiokafka = { version = "^0.7.2", optional = true }

# msgpack
msgpack = { version = "^1.0.2", optional = true }

# redis
aioredis = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
cbor = ["cbor2"]
kafka = ["aiokafka"]
msgpack = ["msgpack"]
redis = ["aioredis"]

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.812"
pytest = "^6.2.5"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.12.1"
pytest-profiling = "^1.7.0"
pytest-stub = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
